--- a/platformio.ini
+++ b/platformio.ini
@@ -139,6 +139,25 @@ build_flags =
 
 ;================================================================
 
+[env:VARIANT_IBUS_TANK]
+platform        = ststm32
+framework       = stm32cube
+board           = genericSTM32F103RC
+debug_tool      = stlink
+upload_protocol = stlink
+
+build_flags =
+    -DUSE_HAL_DRIVER
+    -DSTM32F103xE
+    -T./STM32F103RCTx_FLASH.ld
+    -lc
+    -lm
+    -g -ggdb        ; to generate correctly the 'firmware.elf' for STM STUDIO vizualization
+    -D VARIANT_IBUS
+    -D VARIANT_IBUS_TANK
+
+;================================================================
+
 [env:VARIANT_HOVERCAR]
 platform        = ststm32
 framework       = stm32cube
